--- a/04-application.Rmd
+++ b/04-application.Rmd
@@ -1,7 +1,5 @@
-# Applications
+# Migración
 
 Some _significant_ applications are demonstrated in this chapter.
 
-## Example one
 
-## Example two
